revendor commit 27a84ecb811200990add07a047214f4ee7f77d48
This includes an upstream security fix. See
https://github.com/XKCP/XKCP/security/advisories/GHSA-6w4m-2xhg-2658.

It also includes hardware acceleration for ARMv8. See
https://github.com/XKCP/K12/commit/096ac0e29d29858bb305079f8d4681b6ca004679.

--- a/XKCP-K12/Makefile.build
+++ b/XKCP-K12/Makefile.build
@@ -57,9 +57,16 @@ http://creativecommons.org/publicdomain/zero/1.0/
         <h>lib/Plain64/KeccakP-1600-SnP.h</h>
     </fragment>
 
+    <fragment name="ARMv8Asha3" inherits="optimized">
+        <c gcc="-march=armv8.4-a+sha3">lib/ARMv8Asha3/KeccakP-1600-opt64.c</c>
+        <s gcc="-march=armv8.4-a+sha3">lib/ARMv8Asha3/KeccakP-1600-ARMv8Asha3.S</s>
+        <h>lib/ARMv8Asha3/KeccakP-1600-SnP.h</h>
+    </fragment>
+
     <!-- KangarooTwelve -->
 
     <fragment name="KangarooTwelve">
+        <h>lib/align.h</h>
         <c>lib/KangarooTwelve.c</c>
         <h>lib/KangarooTwelve.h</h>
     </fragment>
@@ -67,6 +74,7 @@ http://creativecommons.org/publicdomain/zero/1.0/
     <!-- For the name of the targets, please see the end of this file. -->
 
     <fragment name="common">
+        <h>lib/align.h</h>
         <h>lib/brg_endian.h</h>
     </fragment>
 
@@ -74,6 +82,7 @@ http://creativecommons.org/publicdomain/zero/1.0/
     <fragment name="K12Tests" inherits="common KangarooTwelve">
         <c>tests/main.c</c>
         <c>tests/testPerformance.c</c>
+        <c>tests/timing.c</c>
         <h>tests/timing.h</h>
         <h>tests/testPerformance.h</h>
         <c>tests/testKangarooTwelve.c</c>
@@ -102,7 +111,7 @@ http://creativecommons.org/publicdomain/zero/1.0/
     <!-- Target names are of the form x/y where x is taken from the first set and y from the second set. -->
     <group all="all">
         <product delimiter="/">
-            <factor set="generic32 generic64 generic64noAsm plain64"/>
+            <factor set="generic32 generic64 generic64noAsm plain64 ARMv8Asha3"/>
             <factor set="K12Tests libk12.a libk12.so libk12.dylib"/>
         </product>
     </group>
